--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -6,7 +6,9 @@
 
 * 4 本法所稱外國公司，謂以營利為目的，依照外國法律組織登記，並經中國政府認許，在中國境內營業之公司。
 
-* 5 本法所稱主管機關，在中央為經濟部，在省為建設廳，直轄市為社會局。
+* 5 本法所稱主管機關，在中央為經濟部，在省為建設廳，直轄市為建設局或社會局。
+
+> 釋：自台北市改制以後，其與現行台北市行政組織制度，已不相符合，爰參照商業登記法第六條之規定在末句增加「建設局或」四字。
 
 * 6 公司非在中央主管機關登記並發給執照後，不得成立。
 
@@ -14,7 +16,9 @@
 
 * 8 本法所稱公司負責人，在無限公司、兩合公司為執行業務或代表公司之股東；在有限公司為董事或執行業務股東；在股份有限公司為董事；在股份兩合公司為無限責任股東。公司之經理人或清算人，有限公司之監察人，股份有限公司之發起人、監察人、檢查人或重整人，股份兩合公司之監察人或檢查人，在執行其職務之範圍內，亦為公司之負責人。
 
-* 9 公司設立登記後，如發現其設立登記或其他登記事項，有違法或虛偽情事時，經法院裁判確定後，通知中央主管機關撤銷其登記。公司負責人有前項情事時，各科二千元以下罰金；其情節重大者，各處一年以下有期徒刑、拘役、或科四千元以下罰金。
+* 9 公司設立登記後，如發現其設立登記或其他登記事項，有違法或虛偽情事時，公司負責人各科二千元以下罰金，其情節重大者，各處一年以下有期徒刑、拘役或科四千元以下罰金。前項裁判確定後，由法院通知中央主管機關撤銷其登記。
+
+> 釋：現行條文第一項所規定之裁判，在司法實務上認係民事裁判，並不包括第二項之刑事裁判在內。故此迂緩程序，對於保護社會公益，殊有妨礙，爰加以修正之。
 
 * 10 公司有左列情事之一者，中央主管機關，得依職權或據地方主管機關呈請或利害關係人之申請，命令解散之：一、公司設立後滿六個月尚未開始營業者，或開始營業後自行停止營業一年以上者。二、公司董事或執行業務股東，有違反法令或章程之行為，足以影響公司正常經營，經主管機關以書面警告而不改正，尚在繼續中者。前項第一款所定期限，如有正當事由，公司得申請准予延展。
 
@@ -54,7 +58,9 @@
 
 * 28 本法所稱公告，除主管機關之公告，應登載政府公報外，其他公告，應登載於本公司所在之縣（市）或省（市）之日報顯著部分。
 
-* 29 公司得依章程規定設置經理人，經理人有數人時，應以一人為總經理，一人或數人為經理。經理人之委任、解任、及報酬，依左列規定定之：一、無限公司、兩合公司、股份兩合公司須有全體無限責任股東過半數同意。二、有限公司須有全體股東過半數同意。三、股份有限公司須有董事過半數同意。設有總經理之公司，其他經理之委任、解任，由總經理提請後，依前項規定辦理。
+* 29 公司得依章程規定置經理人，經理人有數人時，應以一人為總經理，一人或數人為經理。經理人之委任、解任及報酬，依左列規定定之：一、無限公司、兩合公司、股份兩合公司須有全體無限責任股東過半數同意。二、有限公司須有全體股東過半數同意。三、股份有限公司須有董事過半數同意。置有總經理之公司，其他經理之委任、解任，由總經理提請後，依前項規定辦理。經理人須在國內有住所或居所。
+
+> 釋：現行條文對於負公司實際業務之經理人，不規定其國內有住居所，係一疏漏，爰增列第四項，以其週全。
 
 * 30 有左列情事之一者，不得充經理人，其已充任者，解任之，並由主管機關撤銷其經理人登記：一、曾犯內亂、外患罪，經判決確定或通緝有案尚未結案者。二、曾犯詐欺、背信、侵占罪或違反工商管理法令，經受有期徒刑一年以上刑之宣告，服刑期滿尚未逾二年者。三、曾服公務虧空公款，經判決確定，服刑期滿尚未逾二年者。四、受破產之宣告，尚未復權者。五、有重大喪失債信情事，尚未了結或了結後尚未逾二年者。六、限制行為能力者。
 
@@ -78,7 +84,9 @@
 
 * 40 無限公司之股東，應有二人以上，其中半數，須在國內有住所。股東應以全體之同意，訂立章程，簽名蓋章，置於本公司，並每人各執一份。
 
-* 41 無限公司章程應載明左列各款事項：一、公司名稱。二、所營事業。三、股東姓名、住所。四、資本總額及各股東之出資額。五、各股東有以現金以外之財產為出資者，其種類、數量、價格或估價之標準。六、盈餘及虧損分派之比例或標準。七、本公司所在地、設有分公司者，其所在地。八、定有代表公司之股東者，其姓名。九、定有執行業務之股東者，其姓名。十、定有解散之事由者，其事由。十一、訂立章程之年月日。公司負責人不備置前項章程於本公司者，各科一千元以下罰鍰；其所備章程有虛偽之記載時，各科四千元以下罰金。
+* 41 無限公司章程應載明左列各款事項：一、公司名稱。二、所營事業。三、股東姓名、住所或居所。四、資本總額及各股東之出資額。五、各股東有以現金以外之財產為出資者，其種類、數量、價格或估價之標準。六、盈餘及虧損分派之比例或標準。七、本公司所在地。設有分公司者，其所在地。八、定有代表公司之股東者，其姓名。九、定有執行業務之股東者，其姓名。十、定有解散之事由者，其事由。十一、訂立章程之年、月、日。公司負責人不備置前項章程於本公司者，各科一千元以下罰鍰；其所備章程有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：於第一項第三款「住所」二字之下，增加「或居所」三字。
 
 * 42 公司之內部關係，除法律有規定者外，得以章程定之。
 
@@ -86,7 +94,9 @@
 
 * 44 股東以債權抵作股本，而其債權到期不得受清償者，應由該股東補繳；如公司因之受有損害，並應負賠償之責。
 
-* 45 各股東均有執行業務之權利，而負其義務，但章程訂定由股東中之一人或數人執行業務者，從其訂定。
+* 45 各股東均有執行業務之權利，而負其義務。但章程中訂定由股東之一人或數人執行業務者，從其訂定。前項執行業務之股東須半數以上在國內有住所。
+
+> 釋：本法對於股份有限公司，規定其常務董事，須半數以上在國內有住所，現將無限公司、有限公司、兩合公司及股份兩合公司之負責人，也規定必須在國內有住所，以求公正。
 
 * 46 股東之數人或全體執行業務時，關於業務之執行，取決於過半數之同意。執行業務之股東，關於通常事務，各得單獨執行。但其餘執行業務之股東，有一人提出異議時，應即停止執行。
 
@@ -108,7 +118,9 @@
 
 * 55 股東非經其他股東全體之同意，不得以自己出資之全部或一部，轉讓於他人。
 
-* 56 公司得以章程特定代表公司之股東；其未經特定者，各股東均得代表公司。
+* 56 公司得以章程特定代表公司之股東；其未經特定者，各股東均得代表公司。第四十五條第二項之規定，於代表公司之股東準用之。
+
+> 釋：增列第二項。
 
 * 57 代表公司之股東，關於公司營業上一切事務，有辦理之權。
 
@@ -128,7 +140,9 @@
 
 * 65 章程未定公司存續期限者，除關於退股另有訂定外，股東得於每營業年度終了退股；但應於六個月前，以書面向公司聲明。股東有非可歸責於自己之重大事由時，不問公司定有存續期限與否，均得隨時退股。
 
-* 66 除前條規定外，股東有左列各款情事之一者退股：一、章程所定退股事由。二、死亡。三、破產。四、受禁治產之宣告。五、除名。
+* 66 除前條規定外，股東有左列各款情事之一者退股：一、章程所定退股事由。二、死亡。三、破產。四、受禁治產之宣告。五、除名。六、股東之出資，經法院強制執行者。依前項第六款規定退股時，執行法院應於二個月前通知公司及其他股東。
+
+> 釋：第一項主文維持現行法文字，另增列第六款及第二項。
 
 * 67 股東有左列各款情事之一者，得經其他股東全體之同意議決除名。但非通知後不得對抗該股東：一、應出之資本不能照繳或屢摧不繳者。二、違反第五十四條第一項規定者。三、有不正當行為妨害公司之利益者。四、對於公司不盡重要之義務者。
 
@@ -162,7 +176,9 @@
 
 * 82 法院因利害關係人之聲請，認為必要時，得將清算人解任。但股東選任之清算人，亦得由股東過半數之同意，將其解任。
 
-* 83 清算人應於就任後十五日內，將其姓名、住所及就任日期，向法院聲報。清算人之解任，應由股東於十五日內，向法院聲報。清算人由法院選派時，應公告之，解任時亦同。違反第一項或第二項聲報限期之規定者，各科一千元以下罰鍰。
+* 83 清算人應於就任後十五日內，將其姓名、住所或居所及就任日期，向法院聲報。清算人之解任，應由股東於十五日內，向法院聲報。清算人由法院選派時，應公告之；解任時亦同。違反第一項或第二項聲報限期之規定者，各科一千元以下罰鍰。
+
+> 釋：在第一項第三句「住所」之下，增加「或居所」三字。
 
 * 84 清算人之職務如左：一、了結現務。二、收取債權、清償債務。三、分派盈餘或虧損。四、分派賸餘財產。清算人執行前項職務，有代表公司為訴訟上或訴訟外一切行為之權。但將公司營業包括資產負債轉讓於他人時，應得全體股東之同意。
 
@@ -192,17 +208,23 @@
 
 * 97 清算人與公司之關係，除本法規定外，依民法關於委任之規定。
 
-* 98 有限公司之股東，應有二人以上二十人以下，其中半數須在國內有住所。股東應以全體之同意訂立章程，簽名蓋章，置於本公司，並每人各執一份。
+* 98 有限公司之股東，應有二人以上二十人以下，其中半數須在國內有住所。股東人數因繼承或遺贈而變更時，不受前項二十人之限制。股東應以全體之同意訂立章程、簽名、蓋章，置於本公司，並每人各執一份。
+
+> 釋：增列第二項。俾適應股東之出資額因繼承、遺贈而人數增加超出二十人之情況。
 
 * 99 各股東對於公司之責任，以其出資額為限。
 
 * 100 公司資本總額，應由各股東全部繳足，不得分期繳款或向外招募。
 
-* 101 有限公司章程應載明左列各款事項：一、公司名稱。二、所營事業。三、股東姓名、住所。四、資本總額及各股東出資額。五、盈餘及虧損分派比例或標準。六、本公司所在地，設有分公司者其所在地。七、定有執行業務股東者，其姓名。八、定有解散事由者，其事由。九、公司為公告之方法。十、訂立章程之年月日。公司負責人不備置前項章程於本公司者，各科一千元以下罰鍰，其所備章程有虛偽之記載時，各科四千元以下罰金。
+* 101 有限公司章程應載明左列各款事項：一、公司名稱。二、所營事業。三、股東姓名、住所或居所。四、資本總額及各股東出資額。五、盈餘及虧損分派比例或標準。六、本公司所在地。設有分公司者，其所在地。七、定有執行業務股東者，其姓名。八、定有解散事由者，其事由。九、公司為公告之方法。十、訂立章程之年、月、日。公司負責人不備置前項章程於本公司者，各科一千元以下罰鍰；其所備章程有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：在第一項第三款「住所」之下，增加「或居所」三字。
 
 * 102 公司不問出資多寡，每一股東有一表決權；但得以章程訂定按出資多寡比例分配表決權。公司有股東會組織者，除本法及章程另有規定外，準用股份有限公司股東會之規定。政府或法人為股東時，準用第一百八十一條之規定。
 
-* 103 公司應在本公司備置股東名簿，記載左列各款事項：一、各股東出資額及其股單號數。二、各股東姓名或名稱、住所。三、繳納股款之年月日。公司負責人不備置前項股東名簿於本公司者，各科一千元以下罰鍰，其所備股東名簿有虛偽之記載時，各科四千元以下罰金。
+* 103 公司應在本公司備置股東名簿，記載左列各款事項：一、各股東出資額及其股單號數。二、各股東姓名或名稱、住所或居所。三、繳納股款之年、月、日。公司負責人不備置前項股東名簿於本公司者，各科一千元以下罰鍰；其所備股東名簿有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：在第一項第二款「住所」二字之下，增加「或居所」三字。
 
 * 104 公司設立登記後，應發給股單，載明左列各款事項：一、公司名稱。二、設立登記之年、月、日。三、股東姓名或名稱及其出資額。四、發給股單之年、月、日。第一百六十二條第二項、第一百六十三條第一項但書、第一百六十五條之規定，於前項股單準用之。
 
@@ -212,13 +234,17 @@
 
 * 107 公司變更組織時，準用第七十七條之規定。
 
-* 108 公司章程訂明專由股東中之一人或數人執行業務時，準用第四十五條、第四十六條、第四十九條至第五十三條、第五十五條至第五十九條及第二百十一條之規定。公司股東選任董事執行業務者，準用股份有限公司董事之規定。第五十四條第二項、第三項之規定，於董事或執行業務之股東準用之。
+* 108 公司章程訂明專由股東中之一人或數人執行業務時，準用第四十五條、第四十六條、第四十九條至第五十三條、第五十六條至第五十九條及第二百十一條之規定。公司股東選任董事執行業務者，準用股份有限公司董事之規定。第五十四條第二項、第三項之規定，於董事或執行業務之股東準用之。
+
+> 釋：將第一項「第五十五條至第五十九條」改為「第五十六條至第五十九條」。
 
 * 109 公司不執行業務之股東，均得行使監察權，其監察權之行使準用第四十八條之規定。公司股東選有監察人者，準用股份有限公司監察人之規定。
 
 * 110 每屆營業年度終了，公司執行業務之股東，應依第二百二十八條之規定，選有董事監察人者，應依第二百二十八條至第二百三十條之規定，造具各項表冊分送各股東，請其承認。前項表冊送達後逾一個月未提出異議者，視為承認。第二百三十一條至第二百三十五條及第二百四十五條之規定，於有限公司準用之。
 
-* 111 股東非得其他全體股東過半數之同意，不得以其出資之全部或一部，轉讓於他人。公司董事或執行業務之股東或監察人，非得其他全體股東之同意，不得以其出資之全部或一部，轉讓於他人。
+* 111 股東非得其他全體股東過半數之同意，不得以其出資之全部或一部，轉讓於他人。公司董事或執行業務之股東或監察人，非得其他全體股東之同意，不得以其出資之全部或一部，轉讓於他人。法院依強制執行程序，將股東之出資轉讓於他人時，應通知公司及其他全體股東，於二十日內，依第一項或第二項之方式，指定受讓人；逾期未指定或指定之受讓人不依同一條件受讓時，視為同意轉讓，並同意修改章程。
+
+> 釋：增列第三項，妨止無限公司、有限公司及兩合公司之股東，遇有其出資部分應受法院強制執行時，藉口其出資之轉讓，應得其他股東之同意，而逃避強制執行。
 
 * 112 公司於完納一切稅捐後，分派盈餘時，應先提出百分之十為法定盈餘公積；但法定盈餘公積已達資本總額時，不在此限。除前項法定盈餘公積外，公司得以章程訂定，或股東全體之同意，加提特別盈餘公積。公司負責人違反第一項之規定，不提出法定盈餘公積時，各科四千元以下罰金。
 
@@ -234,7 +260,9 @@
 
 * 118 有限責任股東，得於每營業年度終了時，查閱公司帳目、業務及財產之情形。遇必要時，法院得因有限責任股東之聲請，許其隨時檢查公司帳目、業務及財產之情形。對於第一項或前項之檢查，有妨礙行為者，各科四千元以下罰金。
 
-* 119 有限責任股東，非得無限責任股東過半數之同意，不得以其出資全部或一部，轉讓他人。
+* 119 有限責任股東，非得無限責任股東過半數之同意，不得以其出資全部或一部，轉讓於他人。第一百十一條第三項之規定，於前項準用之。
+
+> 釋：增列第二項。
 
 * 120 有限責任股東，得為自己或他人，為與本公司同類營業之行為；亦得為他公司之無限責任股東，或合夥事業之合夥人。
 
@@ -266,13 +294,19 @@
 
 * 134 代收股款之銀行或郵局，對於代收之股款，有證明其已收金額之義務，其證明之已收金額，即認為已收股款之金額。
 
-* 135 有左列情形之一者，主管機關得不予核准或撤銷核准：一、申請事項有違反法令或虛偽者。二、申請事項有變更經限期補正而未補正者。前項撤銷核准，未招募者，停止招募，已招募者，應募人得依股份原發行金額加算法定最高利息，請求返還。公司負責人有第一項第一款之情事時，各科四千元以下罰金，其情節重大者，各處一年以下有期徒刑，有第一項第二款之情事時，各科二千元以下之罰鍰。
+* 135 有左列情形之一者，主管機關得不予核准或撤銷核准：一、申請事項有違反法令或虛偽者。二、申請事項有變更，經限期補正而未補正者。公司負責人有前項第一款之情事時，各科四千元以下罰金；其情節重大者各處一年以下有期徒刑；有前項第二款之情事時，各科二千元以下罰鍰。
 
-* 136 前三條關於程序及罰則之規定，對於超過五十人為發起人之發起設立行為準用之。
+> 釋：第一項維持現行法條文，原第三、四兩項略予修正。第二項配合現行法第一百卅六條之刪除，修正移列為第一百卅六條，以免以下條次之改變。
+
+* 136 前條撤銷核准，未招募者，停止招募，已招募者，應募人得依股份原發行金額，加算法定利息，請求返還。
+
+> 釋：原現行條文全部刪除；另將原第一百三十五條第二項之內容修正移列。
 
 * 137 招股章程應載明左列各款事項：一、第一百二十九條及第一百三十條所列各款事項。二、各發起人所認之股數。三、股票超過票面金額發行者，其金額。四、招募股份總數募足之期限，及逾期未募足時，得由認股人撤回所認股份之聲明。五、發行特別股者，其總額及第一百五十七條各款之規定。六、發行無記名股者，其總額。
 
-* 138 發起人應備認股書，載明第一百三十三條第一項各款事項，並加記主管機關核准文號及年月日，由認股人填寫所認股數金額及其住所簽名蓋章。以超過票面金額發行股票者，認股人應於認股書註明認繳之金額。發起人違反第一項之規定，不備認股書者，各科一千元以下罰鍰，其所備認股書有虛偽之記載時，各科四千元以下罰金。
+* 138 發起人應備認股書，載明第一百三十三條第一項各款事項，並加記主管機關核准文號及年、月、日，由認股人填寫所認股數、金額及其住所或居所，簽名、蓋章。以超過票面金額發行股票者，認股人應於認股書註明認繳之金額。發起人違反第一項之規定，不備認股書者，各科一千元以下罰鍰；其所備認股書有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：於第一項末句中之「住所」之下，增加「或居所」三字。
 
 * 139 認股人有照所填認股書，繳納股款之義務。
 
@@ -304,7 +338,9 @@
 
 * 153 創立會結束後，認股人不得將股份撤回。
 
-* 154 股東對於公司之責任，以繳清其股份之金額為限。公司資本有虧損時，股東不得以其對於公司之債權，抵繳其已認未繳之股款。
+* 154 股東對於公司之責任，以繳清其股份之金額為限。
+
+> 釋：現行公司法改採授權資本制，公司股東之股額應一次繳足，故將第二項刪除。
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
@@ -326,7 +362,9 @@
 
 * 164 記名股票，由股票持有人以背書轉讓之。
 
-* 165 記名股票之轉讓，非將受讓人之本名或名稱記載於股票，並將受讓人之本名或名稱及住所，記載於公司股東名簿，不得以其轉讓對抗公司。前項股東名簿記載之變更，於股東常會開會前一個月內，股東臨時會開會前十五日內，或公司決定分派股息及紅利或其他利益之基準日前五日內不得為之。
+* 165 記名股票之轉讓，非將受讓人之本名或名稱記載於股票，並將受讓人之本名或名稱及住所或居所，記載於公司股東名簿，不得以其轉讓對抗公司。前項股東名簿記載之變更，於股東常會開會前一個月內，股東臨時會開會前十五日內，或公司決定分派股息及紅利或其他利益之基準日前五日內不得為之。
+
+> 釋：於第一項中之「住所」之下增加「或居所」三字。
 
 * 166 公司得以章程規定發行無記名股票；但其股數不得超過已發行股份總數二分之一。公司得因股東之請求，發給無記名股票或將無記名股票改為記名式。
 
@@ -334,7 +372,9 @@
 
 * 168 公司非依減少資本之規定，不得銷除其股份。公司負責人違反前項規定銷除股份時，各科四千元以下罰金。
 
-* 169 股東名簿應編號記載左列各款事項：一、各股東之本名或名稱、住所。二、各股東之股數及其股票號數。三、發給股票之年、月、日。四、發行無記名股票者，應記載其股數、號數及發行之年、月、日。五、發行特別股者，並應註明特別種類字樣。公司負責人不備置前項股東名簿於本公司者，各科一千元以下罰鍰，其所備股東名簿有虛偽之記載時，各科四千元以下罰金。
+* 169 股東名簿應編號載記左列各款事項。一、各股東之本名或名稱、住所或居所。二、各股東之股數及其股票號數。三、發給股票之年、月、日。四、發行無記名股票者，應記載其股數、號數及發行之年、月、日。五、發行特別股者，並應註明特別種類字樣。公司負責人不備置前項股東名簿於本公司者，各科一千元以下罰鍰；其所備股東名簿有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：於第一項第一款末句中之「住所」之下，增加「或居所」三字。
 
 * 170 股東會分左列二種：一、股東常會每年至少召集一次。二、股東臨時會於必要時召集之。前項股東常會應於每營業年度終結後六個月內召集之；但有正當事由經報請主管機關核准者，不在此限。公司負責人違反前項召集期限之規定時，各科二千元以下罰鍰。
 
@@ -366,9 +406,13 @@
 
 * 184 股東會得查核董事會造具之表冊、監察人之報告，並決議分派盈餘及股息紅利。執行前項查核時，股東會得選任檢查人。對於前二項查核有妨礙之行為者，各科四千元以下罰金。
 
-* 185 公司為左列行為，應有代表已發行股份總數三分之二以上股東出席之股東會，以出席股東表決權過半數之決定為之：一、為更新設備或變更營業計劃，讓與全部或主要部份之營業或財產。二、締結、變更或終止關於出租全部營業，委託經營或與他人經常共同經營之契約。三、受讓他人全部營業或財產，對公司營運有重大影響者。前項行為之要領，應記載於第一百七十二條所定之通知及公告。第一項之議案，應由有三分之二以上董事出席之董事會，以出席董事過半數之決議提出之。
+* 185 公司為左列行為，應有代表已發行股份總數三分之二以上股東出席之股東會，以出席股東表決權過半數之決定行之：一、締結、變更或終止關於出租全部營業，委託經營或與他人經常共同經營之契約。二、讓與全部或主要部分之營業或財產。三、受讓他人全部營業或財產，對公司營業有重大影響者。前項行為之要領，應記載於第一百七十二條所定之通知及公告。第一項之議案，應由有三分之二以上董事出席之董事會，以出席董事過半數之決議提出之。
 
-* 186 股東於股東會為前條第一項之決議前，已以書面通知公司反對該項行為之意思表示，並於股東會已為反對者，得請求公司以當時公平價格，收買其所有之股份；但股東會為前條第一項第一款之決議，同時決議解散時，不在此限。
+> 釋：第一項第一款將「為更新設備或變更營業計劃」等字刪除，並與第二款之款次對調。
+
+* 186 股東於股東會為前條第一項之決議前，已以書面通知公司反對該項行為之意思表示，並於股東會已為反對者，得請求公司以當時公平價格，收買其所有之股份，但股東會為前條第一項第二款之決議，同時決議解散時，不在此限。
+
+> 釋：配合前條之修正將但書內「第一款」字樣改為第二款。
 
 * 187 前條之請求，應自第一百八十五條第一項決議日起二十日內，提出記載股份種類及數額之書面為之。股東與公司間協議決定股份價格者，公司應自決議日起九十日內支付價款，自第一百八十五條第一項決議日起六十日內未達協議者，股東應於此期間經過後三十日內，聲請法院為價格之裁定。公司對法院裁定之價格，自第二項之期間屆滿日起，應支付法定利息，股份價款之支付，應與股票之交付同時為之，股份之移轉於價款支付時生效。
 
@@ -492,7 +536,9 @@
 
 * 247 公司債之總額，不得逾公司現有全部資產減去全部負債及無形資產後之餘額。無擔保公司債之總額，不得逾前項餘額二分之一。
 
-* 248 公司募集公司債時，董事會應將左列各款事項，申請地方主管機關核轉中央主管機關審核之。一、公司名稱。二、公司債之總額及債券每張之金額。三、公司債之利率。四、公司債償還方法及期限。五、償還公司債款之籌集計劃及其保管方法。六、公司債募得價款之用途及運用計劃。七、前已募集公司債者，其未償還之數額。八、公司債發行之價格或其最低價格。九、公司股份總數及已發行股份總數及其金額。十、公司現有全部資產，減去全部負債及無形資產後之餘額。十一、最近三年第二百二十八條所列之各項表冊，其開業不及三年者，所有開業年度之各項表冊，申請日期已逾年度開始三個月者，應另送最近期之資產負債表及損益表。十二、公司債債權人之受託人名稱及其約定事項。十三、代收款項之銀行或郵局名稱及地址。十四、有承銷或代銷機構者，其名稱及約定事項。十五、有發行擔保者，其種類名稱及證明文件。十六、有發行保證人者，其名稱及證明文件。十七、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實及現況。十八、能轉換股份者，其轉換辦法。十九、董事會之議事錄。二十、公司債其他發行事項或中央主管機關規定之其他事項。公司就前項各款事項有變更時，應即向主管機關申請更正。第一項第七、第九至第十一、第十七各款應由會計師查核簽證，第十二至第十六各款應由律師查核簽證。第一項第十二款之受託人，以金融或信託事業為限，由公司於申請發行時約定之。並負擔其報酬。第一項第十八款之轉換股份額，如超過公司章程所定資本總額時，應先完成變更章程增加資本總額後，始得為之。
+* 248 公司募集公司債時，董事會應將左列各款事項，申請地方主管機關核轉中央主管機關審核之：一、公司名稱。二、公司債之總額及債券每張之金額。三、公司債之利率。四、公司債償還方法及期限。五、償還公司債款之籌集計劃及其保管方法。六、公司債募得價款之用途及運用計劃。七、前已募集公司債者，其未償還之數額。八、公司債發行之價格或其最低價格。九、公司股份總數及已發行股份總數及其金額。十、公司現有全部資產，減去全部負債及無形資產後之餘額。十一、最近三年依第二百二十八條規定所編造之各項表冊，其開業不及三年者，所有開業年度之各項表冊，申請日期已逾年度開始六個月者，應另送上半年之資產負債表。十二、公司債債權人之受託人名稱及其約定事項。十三、代收款項之銀行或郵局名稱及地址。十四、有承銷或代銷機構者，其名稱及約定事項。十五、有發行擔保者，其種類、名稱及證明文件。十六、有發行保證人者，其名稱及證明文件。十七、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實及現況。十八、能轉換股份者，其轉換辦法。十九、董事會之議事錄。二十、公司債其他發行事項，或中央主管機關規定之其他事項。公司就前項各款事項有變更時，應即向主管機關申請更正。第一項第七、第九至第十一、第十七各款應由會計師查核簽證；第十二至第十六款應由律師查核簽證。第一項第十二款之受託人，以金融或信託事業為限，由公司於申請發行時約定之，並負擔其報酬。第一項第十八款之轉換股份額，如超過公司章程所定資本總額時，應先完成變更章程增加資本總額後，始得為之。
+
+> 釋：依照一般會計實務，公司損益表經常係按年度製作，迨至年終始能作成，而資產負債表之編造，則恆以半年為一期，現行條文第一項第十一款之規定與實務不能配合，爰加以修正之。
 
 * 249 公司有左列情形之一者，不得發行無擔保公司債：一、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實已了結者。二、最近三年或開業不及三年之開業年度課稅後之平均淨利，未達原定發行之公司債，應負擔年息總額之百分之一百五十者。
 
@@ -502,21 +548,29 @@
 
 * 252 公司發行公司債之申請經核准後，董事會應於核准通知到達之日起三十日內，備就公司債應募書，附載第二百四十八條第一項各款事項，加記核准之主管機關與年月日文號，並同時將其公告，開始募集；但第二百四十八條第一項第十一款之營業務報告書、財產目錄，第十二款及第十四款之約定事項，第十五款及第十六款之證明文件，第十九款之議事錄等事項，得免予公告。超過前項限期未開始募集而仍須募集者，應重行申請。董事違反第一項之規定，不備應募書者，各科一千元以下罰鍰，其所備應募書有虛偽之記載時，各科四千元以下罰金。
 
-* 253 應募人應在應募書上填寫所認金額及其住所簽名蓋章，並照所填應募書負繳款之義務。應募人以現金當場購買無記名公司債券者，免填前項應募書。
+* 253 應募人應在應募書上填寫所認金額及其住所或居所，簽名、蓋章，並照所填應募書負繳款之義務。應募人以現金當場購買無記名公司債券者，免填前項應募書。
+
+> 釋：於第一項中之「住所」之下，增加「或居所」三字。
 
 * 254 公司債經應募人認定後，董事會應向未交款之各應募人請求繳足其所認金額。
 
-* 255 董事會在實行前條請求前，應將全體記名債券應募人之姓名、住所暨其所認金額及已發行之無記名債券張數、號碼暨金額，開列清冊，連同第二百四十八條第一項各款所定之文件，送交公司債債權人之受託人。前項受託人，為應募人之利益，有查核及監督公司履行公司債發行事項之權。
+* 255 董事會在實行前條請求前，應將全體記名債券應募人之姓名、住所或居所暨其所認金額，及已發行之無記名債券張數、號碼暨金額，開列清冊，連同第二百四十八條第一項各款所定之文件，送交公司債債權人之受託人。前項受託人，為應募人之利益，有查核及監督公司履行公司債發行事項之權。
+
+> 釋：於第一項中之「住所」之下，增加「或居所」三字。
 
 * 256 公司為發行公司債所設定之抵押權或質權，得由受託人為債權人取得，並得於公司債發行前先行設定。受託人對於前項之抵押權或質權或其擔保品，應負責實行或保管之。
 
 * 257 公司債之債券，應編號載明發行之年、月、日及第二百四十八條第一項第一款至第四款及第十八款之事項，有擔保者載明擔保字樣，由董事三人以上簽名蓋章，並經中央主管機關或其核定之發行登記機構簽證後發行之。公司負責人於公司債之債券內，為虛偽之記載時，各科四千元以下罰金。
 
-* 258 公司債存根簿，應將所有債券依次編號，並載明左列各款事項：一、公司債債權人之姓名或名稱及住所。二、第二百四十八條第一項第二款至第四款之事項，第十二款受託人之名稱，第十五款第十六款之發行擔保及保證及第十八款之轉換事項。三、公司債發行之年、月、日。四、各債券持有人取得債券之年、月、日。無記名債券，應以載明無記名字樣，替代前項第一款之記載。公司負責人於公司債存根簿內為虛偽之記載時，各科四千元以下罰金。
+* 258 公司債存根簿，應將所有債券依次編號，並載明左列各款事項：一、公司債債權人之姓名或名稱及住所或居所。二、第二百四十八條第一項第二款至第四款之事項，第十二款受託人之名稱，第十五款、第十六款之發行擔保及保證，及第十八款之轉換事項。三、公司債發行之年、月、日。四、各債券持有人取得債券之年、月、日。無記名債券，應以載明無記名字樣，替代前項第一款之記載。公司負責人於公司債存根簿內為虛偽之記載時，各科四千元以下罰金。
+
+> 釋：於第一項第一款中之「住所」之下，增加「或居所」三字。
 
 * 259 公司募集公司債款後，未經申請核准變更，而用於規定事項以外者，處公司負責人一年以下有期徒刑、拘役或科四千元以下罰金，如公司因此受有損害時，對於公司並負賠償責任。
 
-* 260 記名式之公司債券，得由持有人以背書轉讓之；但非將受讓人之姓名或名稱記載於債券，並將受讓人之姓名或名稱及住所記載於公司債存根簿，不得以其轉讓對抗公司。
+* 260 記名式之公司債券，得由持有人以背書轉讓之。但非將受讓人之姓名或名稱，記載於債券，並將受讓人之姓名或名稱及住所或居所記載於公司債存根簿，不得以其轉讓對抗公司。
+
+> 釋：於第五句中之「住所」之下，增加「或居所」三字。
 
 * 261 債券為無記名式者，債權人得隨時請求改為記名式。
 
@@ -532,23 +586,31 @@
 
 * 267 公司發行新股時，除經政府核定之公營事業外，應保留不低於發行新股總額百分之十之股份，由公司員工承購，其餘於向外公開發行或洽由特定人認購之十日前，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利，原有股東持有股份按比例有不足分認一新股者，得合併共同認購或歸併一人認購。前項新股認購權利，除保留由員工承購者外，得與原有股份分離而獨立轉讓。第一項所定保留員工承購股份之規定及認購期限之規定，於以公積或資產增值抵充，核發新股予原有股東者不適用之。本條之規定，對於因合併他公司而增發新股時不適用之。
 
-* 268 公司發行新股時，除由原有股東及員工全部認足或由特定人協議認購而不公開發行者外，應由董事會將左列事項，申請地方主管機關核轉中央主管機關核准，公開發行：一、公司名稱。二、原定股份總數及已發行數額及其金額。三、發行新股總額暨每股金額及其他發行條件。四、最近三年第二百二十八條所列之各項表冊。其開業不及三年者，為所有開業年度之此項表冊，申請日期已逾年度開始三個月者，應另送最近期之資產負債表及損益表。五、營業計劃書。六、發行特別股者，其種類、股數、每股金額及第一百五十七條各款事項。七、代收股款之銀行或郵局名稱及地址。八、有承銷或代銷機構者。其名稱及約定事項。九、發行新股決議之議事錄。十、中央主管機關規定之其他事項。公司就前項各款事項有變更時，應即向主管機關申請更正。第一項第二款至第四款及第六款，由會計師查核簽證，第七款、第八款由律師查核簽證。第一項之除外規定，對於原股東及員工或特定人超過五十人者，不適用之。第一項第二項規定，對於第二百六十七條第三項之發行新股，不適用之。
+* 268 公司發行新股時，除由原有股東及員工全部認足，或由特定人協議認購而不公開發行者外，應由董事會將左列事項，申請地方主管機關核轉中央主管機關核准，公開發行：一、公司名稱。二、原定股份總數，及已發行數額及其金額。三、發行新股總額，暨每股金額及其他發行條件。四、最近三年依第二百二十八條規定所編造之各項表冊，其開業不及三年者，所有開業年度之各項表冊；申請日期已逾年度開始六個月者，應另送上半年之資產負債表。五、營業計畫書。六、發行特別股者，其種類、股數、每股金額及第一百五十七條各款事項。七、代收股款之銀行或郵局名稱及地址。八、有承銷或代銷機構者，其名稱及約定事項。九、發行新股決議之議事錄。十、中央主管機關規定之其他事項。公司就前項各款事項有變更時，應即向主管機關申請更正。第一項第二款至第四款及第六款，由會計師查核簽證；第七款、第八款由律師查核簽證。第一項、第二項規定，對於第二百六十七條第三項之發行新股不適用之。
+
+> 釋：第一項第四款「為所有開業年度之此項表冊」一句中之「此項」改為「各項」及將第四項刪除。
 
 * 269 公司有左列情形之一者，不得公開發行具有優先權利之特別股：一、最近三年或開業不及三年之開業年度課稅後之平均淨利，不足支付已發行及擬發行之特別股股息者。二、對於已發行之特別股約定股息，未能按期支付者。
 
 * 270 公司有左列情形之一者，不得公開發行新股：一、連續二年有虧損者。但依其事業性質，須有較長準備期間或具有健全之營業計畫，確能改善營利能力者，不在此限。二、資產不足抵償債務者。
 
-* 271 公司發行新股，經核准後，如發現其申請事項，有違反法令或虛偽或不實情形時，中央主管機關得撤銷其核准。為前項撤銷之核准時，未發行者，停止發行；已發行者，股份持有人，得於撤銷時起，向公司依股票原定發行金額加算法定最高利息，返還股票持有人；因此所發生之損害，並應賠償之。第一百三十五條第三項之規定，於本條準用之。
+* 271 公司發行新股，經核准後，如發現其申請事項，有違反法令或虛偽或不實情形時，中央主管機關得撤銷其核准。為前項撤銷核准時，未發行者，停止發行；已發行者，股份持有人，得於撤銷時，向公司依股票原定發行金額加算法定利息，請求返還；因此所發生之損害，並得請求賠償。第一百三十五條第三項之規定，於本條準用之。
+
+> 釋：將第三項中之「第三項」修正為「第二項」。
 
 * 272 公司公開發行新股時，應以現金為股款。但由原有股東認購或由特定人協議認購，而不公開發行者，得以公司事業所需之財產為出資。
 
-* 273 公司公開發行新股時，董事會應備置認股書，載明左列各款事項，由認股人填寫所認股數、種類、金額及其住所簽名蓋章：一、第一百二十九條第一項第一款至第六款及第一百三十條之事項。二、原定股份總數，或增加資本後股份總數中已發行之數額及其金額。三、第二百六十八條第一項第三款至第十款之事項。四、股款繳納日期。公司公開發行新股時，除在前項認股書加記中央主管機關核准文號及年、月、日、外，並應將前項各款事項，於中央主管機關核准通知到達後三十日內，加記核准文號及年月日公告並發行之；但營業報告、財產目錄、議事錄、承銷或代銷機構約定事項，得免予公告。超過前項限期仍須公開發行時，應重行申請。認股人以現金當場購買無記名股票者，免填第一項之認股書。董事違反第一項之規定，不備置認股書者，各科一千元以下罰鍰，其所備認股書有虛偽之記載時，各科四千元以下罰金。
+* 273 公司公開發行新股時，董事會應備置認股書，載明左列各款事項，由認股人填寫所認股數、種類、金額及其住所或居所，簽名、蓋章：一、第一百二十九條第一項第一款至第六款及第一百三十條之事項。二、原定股份總數，或增加資本後股份總數中已發行之數額及其金額。三、第二百六十八條第一項第三款至第十款之事項。四、股款繳納日期。公司公開發行新股時，除在前項認股書加記中央主管機關核准文號及年、月、日外，並應將前項各款事項，於中央主管機關核准通知到達後三十日內，加記核准文號及年、月、日，公告並發行之。但營業報告、財產目錄、議事錄、承銷或代銷機構約定事項，得免予公告。超過前項限期仍須公開發行時，應重行申請。認股人以現金當場購買無記名股票者，免填第一項之認股書。董事違反第一項之規定，不備置認股書者，各科一千元以下罰鍰；其所備認股書有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：於第一項主文末句中之「住所」之下，增加「或居所」三字。
 
 * 274 公司發行新股，而依第二百七十二條但書不公開發行時，仍應依前條第一項之規定，備置認股書，有以財產出資者，並應於認股書中加載第四百十九條第一項第四款之事項。前項財產出資實行後，董事會應送請監察人查核加具意見，報請主管機關核定之。第四百十九條第二項之規定，於前項核定準用之。
 
 * 275 新股股款收足後，持有新股總額百分之五以上之股東以書面請求召集股東會，改選董事、監察人時，董事會應即召集股東會改選之。
 
-* 276 發行新股超過股款繳納期限，而仍有未經認購或已認購而撤回或未繳股款者，其已認購而繳款之股東，得定一個月以上之期限，催告公司使認購足額並繳足股款；逾期不能完成時，得撤回認股，由公司返回其股款，並加給法定最高利息。有行為之董事，對於因前項情事所致公司之損害，應負連帶賠償責任。
+* 276 發行新股超過股款繳納期限，而仍有未經認購或已認購而撤回或未繳股款者，其已認購的繳款之股東，得定一個月以上之期限，催告公司使認購足額並繳足股款；逾期不能完成時，得撤回認股，由公司返回其股款，並加給法定利息。有行為之董事，對於因前項情事所致公司之損害，應負連帶賠償責任。
+
+> 釋：將現行條文末句，移為第二項。
 
 * 277 公司非經股東會決議，不得變更章程。前項股東會之決議，應有代表已發行股份總數三分之二以上之股東出席，以出席股東表決權過半數之同意行之。
 
@@ -560,19 +622,31 @@
 
 * 281 第七十三條及第七十四條之規定，於減少資本準用之。
 
-* 282 公司因財務困難，暫停營業或有停業之虞者，法院得依左列關係人之一之聲請，裁定准予重整。一、董事會。二、繼續六個月以上持有已發行股份總數百分之十以上股份之股東。三、相當於公司已發行股份總數金額百分之十以上之公司債權人。董事會為前項聲請，應以董事三分之二以上之出席，及出席董事過半數同意之決議行之。
+* 282 公開發行股票或公司債之公司，因財務困難，暫停營業或有停業之虞者，法院得依左列關係人之一之聲請，裁定准予重整：一、董事會。二、繼續六個月以上持有已發行股份總數百分之十以上股份之股東。三、相當於公司已發行股份總數金額百分之十以上之公司債權人。董事會為前項聲請，應以董事三分之二以上之出席，及出席董事過半數同意之決議行之。
 
-* 283 公司重整之聲請，應由聲請人以書狀連同副本三份向法院為之。前項書狀應載明左列事項：一、聲請人之姓名、住所及聲請資格。二、公司名稱、所在地及負責人姓名、住所。三、聲請之原因及事實。四、公司所營事業及業務狀況。五、公司之資產負債、損益及其他財務狀況。六、對於公司重整之意見。董事會為聲請時，應由代表公司之董事，檢同董事會議事錄為之。股東或債權人為聲請時，應檢同釋明其資格之文件，對第二項第四第五兩款之事項，得免予記載。
+> 釋：於第一項首句之前，增加「公開發行股票或公司債之」等十一字。
+
+* 283 公司重整之聲請，應由聲請人以書狀連同副本三份向法院為之。前項書狀應載明左列事項：一、聲請人之姓名、住所或居所及聲請資格。二、公司名稱、所在地及負責人姓名、住所。三、聲請之原因及事實。四、公司所營事業及業務狀況。五、公司之資產負債、損益及其他財務狀況。六、對於公司重整之意見。董事會為聲請時，應由代表公司之董事，檢同董事會議事錄為之。股東或債權人為聲請時，應檢同釋明其資格之文件，對第二項第四、第五兩款之事項，得免予記載。
+
+> 釋：於第一項第一款中之「住所」之下，增加「或居所」三字。
 
 * 284 法院受理重整之聲請時，應將聲請書狀副本，檢送中央主管機關及目的事業中央主管機關，並徵詢其意見。聲請人為股東或債權人時，法院應檢同聲請書狀副本，通知該公司。
 
-* 285 法院除為前條第一項徵詢外，並得就對公司業務具有專門學識、經營經驗而非利害關係人者，選任為檢查人，就左列事項，於選任後三十日調查完畢報告法院：一、公司業務及財務實況。二、公司已否依本法公開財務。三、公司營業狀況，依合理財務費用負擔標準，是否尚有經營價值。四、公司負責人對於執行業務有無怠忽或不當及應負之責任。五、聲請事項有無虛偽不實情形。檢查人對於公司業務或財務有關之一切簿冊、文件及財產，得加以檢查，公司之董事、監察人、經理人或其他職員，對於檢查人關於業務財務之詢問，有答復之義務。公司之董事、監察人、經理人或其他職員，拒絕前項檢查或對前項詢問，無故不為答復或為虛偽之陳述者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
+* 285 法院除為前條第一項徵詢外，並得就對公司業務具有專門學識、經營經驗而非利害關係人者，選任為檢查人，就左列事項於選任後三十日調查完畢報告法院：一、公司業務、財務狀況與資產估價。二、公司營業狀況，依合理財務費用負擔標準，是否尚有經營價值。三、公司負責人對於執行業務有無怠忽或不當及應負之責任。四、聲請事項有無虛偽不實情形。檢查人對於公司業務或財務有關之一切簿冊、文件及財產，得加以檢查。公司之董事、監察人、經理人或其他職員，對於檢查人關於業務財務之詢問，有答復之義務。公司之董事、監察人、經理人或其他職員，拒絕前項檢查，或對前項詢問無故不為答復，或為虛偽之陳述者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
 
-* 286 法院於裁定重整前，得命公司負責人，於七日內就公司債權人及股東，依其權利之性質，分別造報名冊，並註明住所及債權或股份總金額。
+> 釋：第一項第二款刪除，以下各款款次遞改。
 
-* 287 法院為公司重整之裁定前，得因利害關係人之聲請或依職權，以裁定為左列各款處分：一、公司財產之保全處分。二、公司業務之限制。三、公司履行債務及對公司行使債權之限制。四、公司破產、和解或強制執行等程序之中止。五、公司記名式股票轉讓之禁止。六、公司負責人，對於公司損害賠償責任之查定及其財產之保全處分。
+* 286 法院於裁定重整前，得命公司負責人，於七日內就公司債權人及股東，依其權利之性質，分別造報名冊，並註明住所或居所及債權或股份總金額。
 
-* 288 有左列情形之一者，法院應駁回重整之聲請：一、聲請程序不合者，但可以補正者應限期命其補正。二、聲請事項有不實者。三、公司經宣告破產已確定者。四、公司依破產法所為之和解決議已確定者。五、公司已解散者。六、公司營業狀況，依合理財務費用負擔標準，無經營價值者。七、公司未依本法公開財務者。
+> 釋：於末句中之「住所」之下，增加「或居所」三字。
+
+* 287 法院為公司重整之裁定前，得因利害關係人之聲請或依職權，以裁定為左列各款處分：一、公司財產之保全處分。二、公司業務之限制。三、公司履行債務及對公司行使債權之限制。四、公司破產、和解或強制執行等程序之中止。五、公司記名式股票轉讓之禁止。六、公司負責人，對於公司損害賠償責任之查定及其財產之保全處分。前項處分，除法院准予重整外，其期間不得超過三個月；必要時，法院得由利害關係人之聲請或依職權以裁定延長之；其延長期間每次不得超過三個月。但以二次為限。
+
+> 釋：增列第二項。
+
+* 288 有左列情形之一者，法院應駁回重整之聲請：一、聲請程序不合者。但可以補正者，應限期命其補正。二、公司未依本法公開發行股票或公司債者。三、聲請事項有不實者。四、公司經宣告破產已確定者。五、公司依破產法所為之和解決議已確定者。六、公司已解散者。七、公司營業狀況，依合理財務費用負擔標準，無經營價值者。
+
+> 釋：第七款移列為第二款並修正為「公司未依本法公開發行股票或公司債者。」原第二款改為第三款，以下各款款次遞改。
 
 * 289 法院為重整裁定時，應就對公司業務具有專門學識及經營經驗者或金融機構，選任為重整監督人，並決定左列事項：一、債權及股東權之申報期間及場所，其期間應在裁定之日起十日以上；三十日以下。二、所申報之債權及股東權之審查期日及場所，其期日應在前款申報期間屆滿後十日以內。三、第一次關係人會議期日及場所，其期日應在第一款申報期間屆滿後十五日以內。前項重整監督人，應受法院監督，並得由法院隨時改選。
 
@@ -594,7 +668,9 @@
 
 * 298 重整監督人，於權利申報期間屆滿後，應依其初步審查之結果，分別製作優先重整債權人、有擔保重整債權人、無擔保重整債權人及股東清冊，載明權利之性質、金額及表決權數額，於第二百八十九條第一項第二款期日之三日前，聲報法院及備置於適當處所，並公告其開始備置日期及處所，以供重整債權人、股東及其他利害關係人查閱。重整債權人之表決權，以其債權之金額比例定之；股東表決權，依公司章程之規定。
 
-* 299 法院審查重整債權，及股東權之期日，重整監督人、重整人及公司負責人，應到場備詢，重整債權人、股東及其他利害關係人，得到場陳述意見。重整債權及股東權，在法院宣告審查終結前，未經異議者，在重整程序中視為確定；有異議者，由法院裁定之。對前項裁定，利害關係人得為抗告；但在抗告程序中，權利人應依裁定之內容及數額行使權利。
+* 299 法院審查重整債權及股東權之期日，重整監督人、重整人及公司負責人應到場備詢，重整債權人、股東及其他利害關係人，得到場陳述意見。有異議之債權或股東權，由法院裁定之。就債權或股東權有實體上之爭執者，應由爭執之利害關係人，於前項裁定送達後二十日內提起確認之訴，並應向法院為起訴之證明；經起訴後在判決確定前，仍依前項裁定之內容及數額行使其權利。但依重整計畫受清償時，應予提存。重整債權或股東權，在法院宣告審查終結前，未經異議者，視為確定；對公司及全體股東、債權人有確定判決同一之效力。
+
+> 釋：將第二、三項修正，並增訂第四項。
 
 * 300 重整債權人及股東，為公司重整之關係人，出席關係人會議，因故不能出席時，得委託他人代理出席。關係人會議由重整監督人為主席，並召集除第一次以外之關係人會議。重整監督人，依前項規定召集會議時，於五日前訂明會議事由，以通知及公告為之。一次集會未能結束，經重整監督人當場宣告連續或展期舉行者，得免為通知及公告。關係人會議開會時，重整人及公司負責人應列席備詢。公司負責人無故對前項詢問不為答覆或為虛偽之答覆者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
 
@@ -608,17 +684,25 @@
 
 * 305 重整計畫經關係人會議可決者，重整人應聲請法院裁定認可後執行之，並報中央主管機關備查。前項法院認可之重整計畫，對於公司及關係人均有拘束力，其所載之給付義務，適於為強制執行之標的者，並得逕予強制執行。
 
-* 306 重整計劃未得關係人會議有表決權各組之可決時，重整監督人應即報告法院，法院得依公正合理之原則，指示變更方針，命關係人會議再予審查。前項重整計劃，經指示變更再予審查，仍未獲關係人會議可決時，應裁定終止重整，但公司確有重整之價值者，法院就其不同意之組得以左列方法之一，修正重整計劃裁定認可之。前項重行審查可決之重整計畫，仍應聲請法院裁定認可。
+* 306 重整計畫未得關係人會議有表決權各組之可決時，重整監督人應即報告法院，法院得依公正合理之原則，指示變更方針，命關係人會議在一個月內再予審查。前項重整計畫，經指示變更再予審查，仍未獲關係人會議可決時，應裁定終止重整。但公司確有重整之價值者，法院就其不同意之組，得以左列方法之一，修正重整計畫裁定認可之：一、有擔保重整債權人之擔保財產，隨同債權移轉於重整後之公司，其權利仍存續不變。二、有擔保重整債權人，對於擔保之財產，無擔保重整債權人，對於可充清償其債權之財產；股東對於可充分派之賸餘財產；均得分別依公正交易價額，各按應得之份，處分清償或分派承受或提存之。三、其他有利於公司業務維持及債權人權利保障之公正合理方法。前條第一項或前項重整計畫，因情事變遷或有正當理由致不能或無須執行時，法院得因重整監督人、重整人或關係人之聲請，以裁定命關係人會議重行審查，其顯無重整之可能或必要者，得裁定終止重整。前項重行審查可決之重整計畫，仍應聲請法院裁定認可。
 
-* 307 法院為前二條處理時，應徵詢中央主管機關及目的事業中央主管機關之意見。法院為終止重整之裁定時，應檢同裁定書，通知主管機關，為終止重整之登記。
+> 釋：於第一項末句中之「再予審查」之上，增加「在一個月內」四字。
 
-* 308 法院裁定終止重整後，有左列效力：一、依第二百八十七條、第二百九十四條、第二百九十五條或第二百九十六條所為之處分或所生之效力，均失效力。二、因怠於申報權利，而不能行使權利者，恢復其權利。三、因裁定重整，而停止之股東會董事及監察人之職權，應即恢復。
+* 307 法院為前二條處理時，應徵詢中央主管機關及目的事業中央主管機關之意見。法院為終止重整之裁定，應檢同裁定書通知主管機關，為終止重整之登記；其合於破產規定者，法院得依職權宣告其破產。
+
+> 釋：第二項後段增加「其合於破產規定者，法院得依職權宣告其破產。」字樣，賦予法院以逕行宣告其破產之權，以保護債權人及債務人雙方之利益。
+
+* 308 法院裁定終止重整，除依職權宣告公司破產者，依破產法之規定外，有左列效力：一、依第二百八十七條、第二百九十四條、第二百九十五條或第二百九十六條所為之處分或所生之效力，均失效力。二、因怠於申報權利，而不能行使權利者，恢復其權利。三、因裁定重整而停止之股東會、董事及監察人之職權，應即恢復。
+
+> 釋：配合第三百零七條之修正，於第一項增列除外之規定。
 
 * 309 公司重整中，本法左列各條規定，如與事實確有扞格時，經重整人聲請法院，得裁定另作適當之處理：一、第二百七十七條變更章程之規定。二、第二百七十八條增資之規定。三、第二百七十九條及第二百八十一條減資之通知公告期間及限制之規定。四、第二百六十八條至第二百七十條及第二百七十六條發行新股之規定。五、第二百四十八條至第二百五十條，發行公司債之規定。六、第一百二十八條、第一百三十三條、第一百四十八條至第一百五十條及第一百五十五條設立公司之規定。
 
 * 310 公司重整人，應於重整計畫所定期限內，完成重整工作，並召集重整後之股東會。重整後之公司董事、監察人於就任後，應即向主管機關申請登記或變更登記，並會同重整人報請法院為重整完成之裁定。
 
-* 311 公司重整完成後，有左列效力：一、已申報之債權未受清償部份，除依重整計劃處理，移轉重整後之公司承受者外，其請求權消滅，未申報之債權亦同。二、股東股權經重整而變更或減除之部份，其權利消滅，未申報之無記名股票之權利亦同。三、重整裁定前，公司之破產、和解、強制執行及因財產關係所生之訴訟等程序，即行失其效力。
+* 311 公司重整完成後，有左列效力：一、已申報之債權未受清償部分，除依重整計畫處理，移轉重整後之公司承受者外，其請求權消滅；未申報之債權亦同。二、股東股權經重整而變更或減除之部分，其權利消滅；未申報之無記名股票之權利亦同。三、重整裁定前，公司之破產、和解、強制執行及因財產關係所生之訴訟等程序，即行失其效力。公司債權人對公司債務之保證人及其他共同債務人之權利，不因公司重整而受影響。
+
+> 釋：增列第二項，以免失去保證之意義。
 
 * 312 左列各款，為公司之重整債務，優先於重整債權而為清償：一、維持公司業務繼續營運所發生之債務。二、進行重整程序所發生之費用。前項優先受償權之效力，不因裁定終止重整而受影響。
 
@@ -630,7 +714,9 @@
 
 * 316 股東會對於公司解散或合併之決議，應有代表已發行股份總數四分之三以上股東之出席，以出席股東表決權過半數之同意行之。公司解散時，除破產外，董事會應即將解散之要旨，通知各股東，其有發行無記名股票者，並應公告之。
 
-* 317 公司與他公司合併時，董事會應就合併有關事項，作成合併契約，提出於股東會，股東在集會前或集會中，以書面表示異議，或以口頭表示異議經紀錄者，得放棄表決權，而請求公司以公正價格收買其持有之股份。第一百八十七條及第一百八十八條之規定，於前項準用之。
+* 317 公司與他公司合併時，董事會就合併有關事項，作成合併契約，提出於股東會；股東在集會前或集會中，以書面表示異議，或以口頭表示異議經紀錄者，得放棄表決權，而請求公司按當時公平價格，收買其持有之股份。第一百八十七條及第一百八十八條之規定，於前項準用之。
+
+> 釋：將第一項中之「以公正價格」修改為：「按當時公平價格」。
 
 * 318 公司合併後，存續公司之董事會，或新設公司之發起人，於完成催告債權人程序後，其因合併而有股份合併者，應於股份合併生效後，其不適於合併者，應於該股份為處分後，分別循左列程序行之：一、存續公司，應即召集合併後之股東會，為合併事項之報告，其有變更章程必要者，並為變更章程。二、新設公司，應即召集創立會，訂立章程。前項章程，不得違反合併契約之規定。
 
@@ -664,7 +750,9 @@
 
 * 333 清算完結後，如有可以分派之財產，法院因利害關係人之聲請，得選派清算人重行分派。
 
-* 334 第八十三條至第八十六條、第八十九條及第九十條之規定，於股份有限公司之清算準用之。
+* 334 第八十三條至第八十六條、第八十七條第三項、第八十九條及第九十條之規定，於股份有限公司之清算準用之。
+
+> 釋：於句中增列「第八十七條第三項」等字。
 
 * 335 清算之實行發生顯著之障礙時，法院依債權人或清算人或股東之聲請，或依職權得命令公司開始特別清算，公司負債超過資產有不實之嫌疑者亦同；但其聲請以清算人為限。
 
@@ -714,7 +802,9 @@
 
 * 358 股份兩合公司於左列各款事項，準用兩合公司之規定：一、無限責任股東對內之關係。二、無限責任股東對外之關係。三、無限責任股東之退股。其餘事項，除本章有規定外，準用關於股份有限公司之規定。
 
-* 359 設立股份兩合公司，應由無限責任股東為發起人，訂立章程，載明左列各款事項，簽名蓋章：一、第一百二十九條第一款至第五款之事項。二、無限責任股東之姓名、住所。三、無限責任股東，有以現金以外之財產為出資者，其種類、數量、價格或估價之標準。公司負責人，不備置前項公司章程於本公司者，各科一千元以下罰鍰；其所備章程有虛偽之記載時，各科四千元以下罰金。
+* 359 設立股份兩合公司，應由無限責任股東為發起人，訂立章程，載明左列各款事項，簽名、蓋章：一、第一百二十九條第一款至第五款之事項。二、無限責任股東之姓名、住所或居所。三、無限責任股東。有以現金以外之財產為出資者，其種類、數量、價格或估價之標準。公司負責人不備置前項公司章程於本公司者，各科一千元以下罰鍰；其所備章程有虛偽之記載時，各科四千元以下罰金。
+
+> 釋：於第一項第二款中之「住所」之下，增加「或居所」三字。
 
 * 360 無限責任股東，應負募集股份之責。
 
@@ -766,9 +856,13 @@
 
 * 384 外國公司經認許後，主管機關於必要時，得查閱其有關營業之簿冊文件。
 
-* 385 第三百七十二條第二項規定之代理人，在更換或離境前，外國公司應另指定代理人，並將其姓名、國籍、住址申請主管機關登記。
+* 385 第三百七十二條第二項規定之代理人，在更換或離境前，外國公司應另指定代理人，並將其姓名、國籍、住所或居所申請主管機關登記。
 
-* 386 外國公司因無意在中國境內經常營業，未經申請認許，偶派其代表人在中國境內為法律行為時，應報明左列各款事項，申請中央主管機關備案：一、公司名稱、種類、國籍及所在地。二、公司股本總額及在本國設立登記之年月日。三、公司所營之事業及其代表人在中國境內所為之法律行為。四、在中國境內指定之訴訟及非訴訟代理人之姓名、國籍、住址。前項申請備案文件，應由其本國主管機關或其代表人法律行為所在地之領事官簽名證明。
+> 釋：將末句中之「住址」，修正為「住所或居所」。
+
+* 386 外國公司因無意在中國境內經常營業，未經申請認許，偶派其代表人在中國境內為法律行為時，應報明左列各款事項，申請中央主管機關備案：一、公司名稱、種類、國籍及所在地。二、公司股本總額及在本國設立登記之年、月、日。三、公司所營之事業及其代表人在中國境內所為之法律行為。四、在中國境內指定之訴訟及非訴訟代理人之姓名、國籍、住所或居所。前項申請備案文件，應由其本國主管機關或其代表人法律行為所在地之領事官簽名證明。
+
+> 釋：將第一項第四款中之「住址」修正為：「住所或居所」。
 
 * 387 公司之登記或認許，應由負責人備具申請書，連同本章所定應備之文件二份，向中央主管機關申請或報由地方主管機關轉呈中央主管機關核辦，由代理人申請時，應加具代理之委託書。
 
@@ -794,13 +888,17 @@
 
 * 398 公司為合併時，應於實行後十五日內，向主管機關分別依左列各款申請登記：一、因合併而存續之公司，為變更之登記。二、因合併而消滅之公司，為解散之登記。三、因合併而另立之公司，為設立之登記。公司為前項申請登記時，應分別情形編送資產負債表。公司負責人違反第一項申請登記限期之規定時，各科一千元以下罰鍰。
 
-* 399 公司設立分公司，應於設立後十五日內，將左列各款事項，向主管機關申請登記：一、分公司名稱。二、分公司所在地。三、分公司經理人姓名、籍貫、住所。四、本公司登記執照所載事項及執照號數。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰。
+* 399 公司設立分公司，應於設立後十五日內，將左列各款事項，向主管機關申請登記：一、分公司名稱。二、分公司所在地。三、分公司經理人姓名、籍貫、住所或居所。四、本公司登記執照所載事項及執照號數。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰。
+
+> 釋：於第一項第三款中之「住所」之下，增加「或居所」三字。
 
 * 400 分公司之遷移、撤銷應於遷移或撤銷後十五日內，向主管機關申請登記。公司負責人違反前項申請登記期限之規定時，各科一千元以下之罰鍰。
 
 * 401 分公司設立變更或撤銷之登記，在無限公司、兩合公司、股份兩合公司，由代表公司之股東申請之；在有限公司，由執行業務之股東或代表公司之董事申請之；在股份有限公司，由代表公司之董事申請之。
 
-* 402 公司經理人之委任、解任、調動，應於委任、解任或調動後十五日內，將左列各款事項，向主管機關申請登記：一、經理人之姓名、職稱、住所。二、經理人是否股東或董事。三、經理人就職或解職年月日。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰。
+* 402 公司經理人之委任、解任、調動，應於委任、解任或調動後十五日內，將左列各款事項，向主管機關申請登記：一、經理人之姓名、職稱、住所或居所。二、經理人是否股東或董事。三、經理人就職或解職年、月、日。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰。
+
+> 釋：於第一項第一款中之「住所」之下，增加「或居所」三字。
 
 * 403 公司及外國公司登記事項如有變更時，應於變更後十五日內，向主管機關申請為變更之登記。公司負責人違反前項申請變更登記限期之規定時，各科一千元以下罰鍰。
 
@@ -834,9 +932,13 @@
 
 * 418 股份有限公司設立、解散、增資、減資、發行新股、募集公司債及因合併而變更之登記，由半數以上之董事及至少監察人一人申請之；其他登記事項，由代表公司之董事申請之。
 
-* 419 股份有限公司發起設立者，董事、監察人於就任後十五日內，應將左列各款事項向主管機關申請為設立之登記：一、公司章程。二、股東名簿。三、已發行之股份總額。四、以現金以外之財產抵繳股款者，其姓名及其財產之種類、數量、價格或估價之標準暨公司核給之股數。五、應歸公司負擔之設立費用，及發起人得受報酬或特別利益之數額。六、發行特別股者，其總額及每股金額。七、董事、監察人名單，並註明其住所。八、營業概算書。前項第四款、第五款所列事項，如有冒濫或虛偽者，主管機關經派員檢查後，得裁減或責令補足。公司負責人違反第一項申請登記限期之規定時，各科一千元以下罰鍰；申請登記時有虛偽之記載者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
+* 419 股份有限公司發起設立者，其董事、監察人於就任後十五日內，應將左列各款事項向主管機關申請為設立之登記：一、公司章程。二、股東名簿。三、已發行之股份總額。四、以現金以外之財產抵繳股款者，其姓名及其財產之種類、數量、價格或估價之標準暨公司核給之股數。五、應歸公司負擔之設立費用，及發起人得受報酬或特別利益之數額。六、發行特別股者，其總額及每股金額。七、董事、監察人名單，並註明其住所或居所。八、營業概算書。前項第四款、第五款所列事項，如有冒濫或虛偽者，主管機關經派員檢查後，得裁減或責令補足。公司負責人，違反第一項申請登記限期之規定時，各科一千元以下罰鍰；申請登記時有虛偽之記載者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
 
-* 420 股份有限公司募股設立者，董事、監察人應於創立會結束後十五日內，將左列各款事項，向主管機關申請為設立之登記：一、第一百四十五條創立會通過之報告事項。二、第一百三十三條規定申請核准之通知。三、第一百四十六條規定之董事、監察人或檢查人調查報告書及其附屬文件。四、創立會議事錄。五、董事、監察人名單，並註明其住所。六、營業概算書。七、因合併而設立申請登記者，第四百零六條第三項規定之文件。前條第二項、第三項之規定，於前項準用之。
+> 釋：於第一項第七款中之「住所」之下，增加「或居所」三字。
+
+* 420 股份有限公司募股設立者，其董事、監察人應於創立會完結後十五日內，將左列各款事項，向主管機關申請為設立之登記：一、第一百四十五條創立會通過之報告事項。二、第一百三十三條規定申請核准之通知。三、第一百四十六條規定之董事、監察人或檢查人調查報告書及其附屬文件。四、創立會議事錄。五、董事、監察人名單，並註明其住所或居所。六、營業概算書。七、因合併而設立申請登記者，第四百零六條第三項規定之文件。前條第二項、第三項之規定，於前項準用之。
+
+> 釋：於第一項第五款中之「住所」之下，增加「或居所」三字。
 
 * 421 股份有限公司因解散申請登記者，應敘明解散事由；其因股東會之決議而解散者，應加具關於解散之股東會議事錄；因合併而解散者，並準用第四百零六條第三項之規定。
 
@@ -858,7 +960,9 @@
 
 * 430 股份兩合公司之設立、解散、增資、減資及因合併而變更之登記，由全體無限責任股東及半數以上監察人申請之；其他事項之登記，由代表公司之無限責任股東申請之。
 
-* 431 股份兩合公司創立會完結後，應於十五日內，將左列各款事項，向主管機關申請登記：一、第一百二十九條第一款至第五款及第七款，第三百五十九條第二款、第三款所載事項。二、定有代表公司之無限責任股東者，其姓名，住所。三、監察人之姓名、住所。四、發行特別股者，其總額及每股金額。五、定有解散事由者，其事由。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰；申請登記有虛偽之記載者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
+* 431 股份兩合公司創立會完結後，應於十五日內，將左列各款事項，向主管機關申請登記：一、第一百二十九條第一款至第五款及第七款、第三百五十九條第二款、第三款所載事項。二、定有代表公司之無限責任股東者，其姓名、住所或居所。三、監察人之姓名、住所或居所。四、發行特別股者，其總額及每股金額。五、定有解散事由者，其事由。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰；申請登記時有虛偽之記載者，各處一年以下有期徒刑、拘役或科四千元以下罰金。
+
+> 釋：於第一項第二款及第三款中之「住所」之下，各增加「或居所」三字。
 
 * 432 股份兩合公司設立登記，準用第四百零六條之規定。
 
@@ -866,7 +970,9 @@
 
 * 434 外國公司申請認許，由其本公司董事或執行業務股東，或其在中國之代表人或經理人或各該人員之代理人為之。前項申請人，應附送證明其國籍之證件，及本公司之授權證書或委託證書。
 
-* 435 外國公司申請認許時，應報明並備具左列事項及文件：一、公司之名稱、種類及其國籍。二、公司所營之事業及在中國境內所營之事業。三、資本總額，如發有股份者，其股份總數、股份種類、每股金額及已繳金額。四、在中國境內營業所用資金之金額。五、本公司所在地及中國境內設立分公司所在地。六、在本國設立登記及開始營業之年月日。七、董事及公司其他負責人之姓名、國籍、住所。八、在中國境內指定之訴訟及非訴訟代理人姓名、國籍、住所及其授權證書。九、無限公司、兩合公司、股份兩合公司或其他公司之全體無限責任股東之姓名、國籍、住所，所認股份及已繳股款。十、公司章程及其在本國登記證件之副本或影本，其無章程或登記證件者，其本國主管機關證明其為公司之文件。十一、在其本國依特許而成立者，其本國主管機關特許文件之副本或影本。十二、依中國法令其營業須經特許者，其特許證件之副本或影本。十三、在中國營業之業務計劃書。十四、股東會或董事會，對於請求認許之議事錄。前項各類文件，其屬外文者，均須附具中文譯本。
+* 435 外國公司申請認許時，應報明並備具左列事項及文件：一、公司之名稱、種類及其國籍。二、公司所營之事業及在中國境內所營之事業。三、資本總額。如發有股份者，其股份總額、股份種類、每股金額及已繳金額。四、在中國境內營業所用資金之金額。五、本公司所在地及中國境內設立公司所在地。六、在本國設立登記及開始營業之年、月、日。七、董事及公司其他負責人之姓名、國籍、住所。八、在中國境內指定之訴訟及非訴訟代理人姓名、國籍、住所或居所及其授權證書。九、無限公司、兩合公司、股份兩合公司或其他公司之全體無限責任股東之姓名、國籍、住所、所認股份已繳股款。十、公司章程及其在本國登記證件之副本或影本，其無章程或登記證件者，其本國主管機關證明其為公司之文件。十一、在其本國依特許而成立者，其本國主管機關特許文件之副本或影本。十二、依中國法令其營業須經特許者，其特許證件之副本或影本。十三、在中國營業之業務計畫書。十四、股東會或董事會，對於請求認許之議事錄。前項各類文件，其屬外文者，均須附具中文譯本。
+
+> 釋：於第一項第八款中之「住所」之下，增加「或居所」三字。
 
 * 436 外國公司經認許後，在中國境內設立分公司者，應於設立後十五日內，向主管機關申請登記。公司負責人違反前項申請登記限期之規定時，各科一千元以下罰鍰。
 
