民事訴訟法 1971.11.2

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -60,7 +60,9 @@
 
 * 31 移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。前項情形，法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
 
-* 32 推事有左列各款情形之一者，應自行迴避，不得執行職務。一、推事或其配偶、前配偶或未婚配偶，為該訴訟事件當事人者。二、推事為該訴訟事件當事人，八親等內之血親或五親等內之姻親或曾有此親屬關係者。三、推事或其配偶、前配偶或未婚配偶，就該訴訟事件與當事人有共同權利人、共同義務人或償還義務人之關係者。四、推事現為或曾為該訴訟事件當事人之法定代理人或家長、家屬者。五、推事於該訴訟事件，現為或曾為當事人之訴訟代理人或輔佐人者。六、推事於該訴訟事件，曾為證人或鑑定人者。七、推事曾參與該訴訟事件之前審裁判，更審前之裁判，公斷或仲裁者。
+* 32 推事有左列各款情形之一者，應自行迴避，不得執行職務：一、推事或其配偶、前配偶或未婚配偶，為該訴訟事件當事人者。二、推事為該訴訟事件當事人、八親等內之血親、或五親等內之姻親，或曾有此親屬關係者。三、推事或其配偶、前配偶或未婚配偶，就該訴訟事件與當事人有共同權利人，共同義務人或償還義務人之關係者。四、推事現為或曾為該訴訟事件當事人之法定代理人或家長、家屬者。五、推事於該訴訟事件，現為或曾為當事人之訴訟代理人或輔佐人者。六、推事於該訴訟事件，曾為證人或鑑定人者。七、推事曾參與該訴訟事件之前審裁判、更審前之裁判或仲裁者。
+
+> 釋：第七款「公斷」二字刪除。
 
 * 33 遇有左列各款情形，當事人得聲請推事迴避：一、推事有前條所定之情形而不自行迴避者。二、推事有前條所定以外之情形，足認其執行職務有偏頗之虞者。當事人如已就該訴訟有所聲明或為陳述後，不得依前項第二款聲請推事迴避。但迴避之原因發生在後或知悉在後者，不在此限。
 
@@ -204,7 +206,9 @@
 
 * 103 被告就前條之提存物，與質權人有同一之權利。前條具保證書人，於原告不履行其所負義務時，有就保證金額履行之責任。
 
-* 104 有左列各款情形之一者，法院應依供擔保人之聲請，以裁定命返還其提存物或保證書：一、應供擔保之原因消滅者。二、訴訟終結後，法院依供擔保人之聲請，催告受擔保利益人於一定期間內行使權利而未行使者。關於前項聲請之裁定得為抗告，抗告中應停止執行。供擔保人證明受擔保利益人同意返還者，法院應依供擔保人之聲請，返還其提存物或保證書，毋庸裁定。
+* 104 有左列各款情形之一者，法院應依供擔保人之聲請，以裁定命返還其提存物或保證書：一、應供擔保之原因消滅者。二、訴訟終結後，供擔保人證明已定二十日以上期間，催告受擔保利益人行使權利，而未行使者。關於前項聲請之裁定，得為抗告；抗告中應停止執行。假執行之本案判決已全部勝訴確定，假扣押、假處分、假執行於執行程序實施前撤回執行之聲請，或供擔保人證明受擔保利益人同意返還者，法院應依供擔保人之聲請，返還其提存物或保證書，毋庸裁定。
+
+> 釋：一、第一項第二款之「一定期間內」改為「二十日」。因現行法規定對於供擔保人領回擔保物，常須多次奔走，且手續浩繁，頗多不便民之處，其程序自應予以簡化，宜加修正，俾資因應。二、第三項為更周詳起見，將文義大幅修改；復按如何執行，本案判決已全部勝訴確定，提存所應依供擔保人之聲請，返還其提存物或保證書，此項返還，究宜向法院聲請抑向提存所為之，如屬後者，則提存所是否有權決定？不無疑慮，經研討後修正為：「法院應依供擔保人之聲請，返還其提存物或保證書，毋庸裁定。」
 
 * 105 供擔保之提存物或保證書，除得由當事人約定變換外，法院得依供擔保人之聲請，以裁定許其變換。關於前項聲請之裁定，得為抗告；抗告中應停止執行。
 
@@ -358,7 +362,9 @@
 
 * 180 法院因天災或其他事故不能執行職務者，訴訟程序在法院公告執行職務前當然停止。但因戰事不能執行職務者，訴訟程序在法院公告執行職務屆滿六個月以前當然停止。
 
-* 181 當事人於戰時服兵役或因天災或其他事故與法院交通隔絕者，訴訟程序在障礙消滅以前當然停止。當事人因戰事與法院交通隔絕者，訴訟程序在障礙消滅屆滿六個月以前當然停止。前條但書及前項情形，當事人於停止期間內均向法院為訴訟行為者，其停止終竣。
+* 181 當事人於戰時服兵役或因天災或其他事故，有停止訴訟程序之必要者，法院得依聲請或依職權，在障礙消滅前裁定停止訴訟程序。當事人因戰事與法院交通隔絕者，訴訟程序在障礙消滅屆滿三個月以前當然停止。前條但書及前項情形，當事人於停止期間內，均向法院為訴訟行為者，其停止終竣。
+
+> 釋：第一項修正為「當事人於戰時服兵役或因天災或其他事故有停止訴訟程序之必要者，法院得依聲請或依職權在障礙消滅前，裁定停止訴訟程序。」俾法院得視實際情形而為決定，原法第二項文字仍可採用，惟其中「訴訟在障礙消滅屆滿六個月以前，當然停止，」經決定將「六個月」修正「三個月」，以期週妥，原法第三項文字仍予維持，毋庸修正。
 
 * 182 訴訟全部或一部之裁判，以他訴訟之法律關係是否成立為據者，法院得在他訴訟終結前，以裁定停止訴訟程序。前項規定，於法律關係應由法院以外之機關確定其是否成立者準用之。
 
@@ -520,7 +526,9 @@
 
 * 261 訴之變更或追加及提起反訴，得於言詞辯論時為之。於言詞辯論時所為訴之變更、追加或提起反訴，應記載於言詞辯論筆錄；如他造不在場，應將筆錄送達。
 
-* 262 原告於判決確定前，得撤回訴之全部或一部。但被告已為本案之言詞辯論者，應得其同意。訴之撤回，應以書狀為之。但在言詞辯論時，得以言詞為之。於言詞辯論時所為訴之撤回，應記載於言詞辯論筆錄，如他造不在場，應將筆錄送達。
+* 262 原告於判決確定前，得撤回訴之全部或一部。但被告已為本案之言詞辯論者，應得其同意。訴之撤回，應以書狀為之。但在言詞辯論時，得以言詞為之。於言詞辯論時所為訴之撤回，應記載於言詞辯論筆錄，如他造不在場，應將筆錄送達。訴之撤回，他造於收受撤回書狀或筆錄之送達後十日內未提出異議者，視為同意撤回。
+
+> 釋：新增第四項增訂撤回訴訟之程式，以免發生爭執。
 
 * 263 訴經撤回者，視同未起訴。但反訴不因本訴撤回而失效力於本案經終局判決後將訴撤回者，不得復提起同一之訴。
 
@@ -744,7 +752,9 @@
 
 * 373 調查證據期日，應通知聲請人，除有急迫情形外，並應於期日前送達聲請書狀或筆錄及裁定於他造當事人而通知之。
 
-* 374 他造當事人不明或調查證據期日不及通知他造者，法院因保護該當事人關於調查證據之權利，得為選任特別代理人。第五十一條第二項至第四項之規定，於前項特別代理人準用之。
+* 374 他造當事人不明或調查證據期日不及通知他造者，法院因保護該當事人關於調查證據之權利，得為選任特別代理人。第五十一條第三項至第五項之規定，於前項特別代理人準用之。
+
+> 釋：原第二項條文中「第二項至第四項」修正為「第三項至第五項」
 
 * 375 調查證據筆錄，由命保全證據之法院保管。但訴訟繫屬他法院者，應送交該法院。
 
@@ -794,7 +804,9 @@
 
 * 398 判決，於上訴期間屆滿時確定。但於上訴期間內有合法之上訴者，阻其確定。不得上訴之判決，於宣示時確定；不宣示者，於送達時確定。
 
-* 399 當事人得請求法院，付與判決確定證明書。判決確定證明書，由第一審法院付與之。但卷宗在上級法院者，由上級法院付與之。判決確定證明書，應於聲請後七日內付與之。
+* 399 當事人得請求法院，付與判決確定證明書。判決確定證明書，由第一審法院付與之。但卷宗在上級法院者，由上級法院付與之。判決確定證明書，應於聲請後七日內付與之。前三項之規定，於裁定確定證明書準用之。
+
+> 釋：增訂第四項：「前三項之規定，於裁定確定證明書準用之。」
 
 * 400 訴訟標的於確定之終局判決中經裁判者，除法律別有規定外，當事人不得就該法律關係更行起訴。主張抵銷之對待請求，其成立與否經裁判者，以主張抵銷之額為限，不得更行主張。
 
@@ -880,9 +892,13 @@
 
 * 441 提起上訴，應以上訴狀表明左列各款事項，提出於原第一審法院為之：一、當事人及法定代理人。二、第一審判決及對於該判決上訴之陳述。三、對於第一審判決不服之程度，及應如何廢棄或變更之聲明。上訴狀內，宜記載新事實及證據，並其他準備言詞辯論之事項。
 
-* 442 提起上訴，如逾上訴期間或係對於不得上訴之判決而上訴者，原第一審法院應以裁定駁回之。上訴有其他顯不合法之情形而可以補正者，原第一審法院應定期間命其補正，如不於期間內補正，可認為係意圖延滯訴訟者，應依他造聲請，以裁定就原判決宣告假執行，並得酌量情形依職權宣告之。
+* 442 提起上訴，如逾上訴期間或係對於不得上訴之判決而上訴者，原第一審法院應以裁定駁回之。上訴有應繳而未繳裁判費或當事人訴訟能力或代理權有欠缺者，原第一審法院應定期間命其補正；如不於期間內補正，原第一審法院應以裁定駁回之。上訴有其他顯不合法之情形而可以補正者，原第一審法院應定期間命其補正；如不於期間內補正，可認為係意圖延滯訴訟者，應依他造聲明，以裁定就原判決宣告假執行，並得酌量情形依職權宣告之。
 
-* 443 上訴未經依前條第一項之規定駁回者，第一審法院應速將上訴狀送達被上訴人。各當事人均提起上訴，或其他各當事人之上訴期間已滿後，第一審法院應速將該訴訟卷宗連同上訴狀及其他有關文件送交第二審法院。前項應送交之卷宗，如為第一審法院所需用者，應自備繕本或節本。
+> 釋：對訴訟費用應繳而未繳，或當事人訴訟能力或代理權有欠缺之情形，與其他顯不合法之情形，似難等量齊觀，應予分別規定為宜，爰特增訂第二項，「上訴有應繳而未繳訴訟費用或當事人訴訟能力或代理權有欠缺者，原第一審法院應定期間命其補正，如不於期間內補正，原第一審法院應以裁定駁回之」，俾免狡黠者藉以拖延訴訟，原第二項改列為第三項。
+
+* 443 上訴未經依前條第一項及第二項之規定駁回者，第一審法院應速將上訴狀送達被上訴人。各當事人均提起上訴，或其他各當事人之上訴期間已滿後，第一審法院應速將該訴訟卷宗連同上訴狀及其他有關文件，送交第二審法院。前項應送交之卷宗，如為第一審法院所需者，應自備繕本或節本。
+
+> 釋：因前條第四百四十二條增列第二項，故本條第一項亦應比照修正，於「第一項」之下增加「及第二項」四字。俾能前後一致。前項應送交之卷宗，如為第一審法院所需者，應自備繕本或節本。
 
 * 444 上訴不合程式或已逾期間或法律上不應准許者，第二審法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正。上訴不合法之情形，已經原第一審法院命其補正而未補正者，得不行前項但書之程序。
 
@@ -928,7 +944,9 @@
 
 * 465 對於第一審判決，或其一部未經向第二審法院上訴，或附帶上訴之當事人，對於維持該判決之第二審判決，不得上訴。
 
-* 466 對於財產權上訴之第二審判決，如因上訴所得受之利益不逾一千元者，不得上訴。前項所定數額，得因地方情形，以司法行政最高機關命令減為五百元，或增至二千元。計算上訴利益，準用民事訴訟費用法關於計算訴訟標的價額之規定。
+* 466 對於財產權上訴之第二審判決，如因上訴所得受之利益不逾八千元者，不得上訴。前項所定數額，得因地方情形，以司法行政最高機關命令減為四千元，或增至一萬二千元。計算上訴利益，準用民事訴訟費用法關於計算訴訟標的價額之規定。對於第四百二十七條第二項訴訟所為之第二審判決，不得上訴。
+
+> 釋：一、將第一項「一千元」修正為「八千元」。修正理由為訴訟權為憲法所賦予，在訴訟法上設以金額限制第三審上訴之規定，原非得已，但仍應注意衡情適時，力求妥當，避免偏失。二、第二項修正為「．．．．．．以司法行政最高機關命令減為四千元或增至一萬二千元」。俾司法行政最高機關得視地方情形，予以彈性之增減。第三項照現行法文字，未加修正。三、新增第四項之理由，以現行法規定訴訟標的額過低，造成第三審負擔過重現象，為減輕第三審法院之負荷及避免當事人之訟累，特參照刑事訴訟法第三百七十六條規定予以增訂第四項。
 
 * 467 對於第二審判決上訴，非以其違背法令為理由，不得為之。
 
@@ -952,7 +970,9 @@
 
 * 477 第三審法院認上訴為有理由者，就該部分應廢棄原判決。因違背訴訟程序之規定廢棄原判決者，其違背之訴訟程序部分，視為亦經廢棄。
 
-* 478 經廢棄原判決者，應將該事件發回原第二審法院或發交其他同級法院。受發回或發交之法院，應以第三審法院為廢棄理由之法律上判斷為其判決之基礎。
+* 478 經廢棄原判決者，應將該事件發回原第二審法院或發交其他同級法院。但原判決之理由未盡或不當，如依其他理由認為判決結果相同者，不得廢棄原判決。前項發回或發交判決，就第二審法院應調查之事項，應詳予指示。受發回或發交之法院，應以第三審法院所為廢棄理由之法律上判斷為其判決基礎。
+
+> 釋：第三審發回或發交之案件，年有增加，強加限制固非所宜，但漫無限制，亦屬堪慮，爰於原第一項之末，增加但書「但原判決之理由未盡或不當，如依其他理由認為判決結果相同者，不得廢棄原判決。」將修正案第二項列為本條第二項，原第二項改列為本條第三項。
 
 * 479 左列各款情形，第三審法院應就該事件自為判決：一、因其於確定之事實，不適用法規或適用不當廢棄原判決，而事件已可依該事實為裁判者。二、因事件不屬普通法院之權限，而廢棄原判決者。
 
@@ -980,7 +1000,9 @@
 
 * 491 抗告，除別有規定外，無停止執行之效力。原法院或審判長得在抗告法院裁定前，停止原裁定之執行。抗告法院得在裁定前，停止原裁定之執行或為其他必要處分。前二項裁定，不得抗告。
 
-* 492 抗告法院認抗告為不合法或無理由者，應為駁回抗告之裁定。認抗告為有理由者，應廢棄原裁定，自為裁定或命原法院或審判長更為裁定。
+* 492 抗告法院認抗告為不合法或無理由者，應為駁回抗告之裁定。認抗告為有理由者，應廢棄原裁定，自為裁定；必要時得命原法院或審判長更為裁定。
+
+> 釋：為減少抗告法院對抗告案件發回之次數，以免因命原法院或審判長更為裁定，致使抗告事件久懸不決，並加重承辦推事之責任感，現行法「自為裁定」與「命原法院或審判長更為裁定」之間，增加「必要時」。
 
 * 493 關於捨棄上訴權及撤回上訴之規定，於抗告準用之。
 
@@ -1024,21 +1046,33 @@
 
 * 513 支付命令之聲請，不合於第五百零八條至第五百十一條之規定，或依聲請之意旨認債權人之請求為無理由者，法院應以裁定駁回之；就請求之一部不得發支付命令者，應僅就該部分之聲請駁回之。前項裁定，不得聲明不服。
 
-* 514 支付命令，應記載左列各款事項：一、第五百十一條第一款、第二款及第四款所定事項。二、債務人如欲免假執行之宣告，應於支付命令送達後十五日內，向債權人清償其請求並賠償程序費用，否則應向發命令之法院提出異議。
+* 514 支付命令，應記載左列各款事項：一、第五百十一條第一款、第二款及第四款所定事項。二、債務人應於支付命令送達後二十日之不變期間內，向債權人清償其請求並賠償程序費用，否則應向發命令之法院提出異議。
+
+> 釋：第二款原法規定支付命令之宣告假執行程序，徒增債權人聲請及法院裁定之煩，對債務人亦無實益，故將督促程序予以簡化，便利債權人行使權利，又第二款規定債務人應於支付命令送達後十五日之不變期間內清償，並賠償程序費用一節，時間稍嫌過短，爰修正為「二十日」，俾應需要。
 
 * 515 支付命令送達於債務人後，法院應速通知債權人。發支付命令後，三個月內不能送達於債務人者，其命令失其效力。
 
 * 516 債務人對於支付命令，得不附理由向發命令之法院提出異議。債務人就請求之一部提出異議者，其效力及於全部。法院應依債務人之聲請，付與已於合法時期提出異議之證明書。
 
-* 517 支付命令所載期間已滿後，發命令之法院應依債權人之聲請，宣告假執行。但宣告前債務人提出異議者，不在此限。宣告假執行之裁定，應並記載債權人所計算之程序費用，命債務人賠償。
+* 517 （刪除）
 
-* 518 宣告假執行之裁定送達後十五日內，債務人仍得提出異議。前項期間為不變期間，提出異議逾此期間者，法院應以裁定駁回之。
+> 釋：本條刪除。依中央法規標準法第十條第一項規定仍保留原條文條次，以便查考。
 
-* 519 債務人對於支付命令於合法時期提出異議者，支付命令失其效力，以債權人支付命令之聲請，視為起訴或聲請調解。前項情形，督促程序費用，應作為訴訟費用或調解程序費用之一部。
+* 518 債務人於支付命令送達後，逾二十日之不變期間，始提出異議者，法院應以裁定駁回之。
 
-* 520 支付命令所載期間已滿後，債權人如於三十日內不為宣告假執行之聲請者，支付命令失其效力，駁回宣告假執行聲請之裁定者亦同。
+> 釋：第五百十八條，係比照第五百十四條之修正，對於支付命令送達後逾期提出異議者之處理，修正意旨甚明，自可採取，惟「逾十五日之不變期間」，第五百十四條，既經修正為「二十日」，本條自應比照修正，以期一致。
 
-* 521 宣告假執行之裁定，於第五百十八條所定期間內未經提出異議，或駁回其異議之裁定已確定者，與確定判決有同一之效力。
+* 519 債務人對於支付命令於法定期間提出異議者，支付命令失其效力，以債權人支付命令之聲請，視為起訴或聲請調解。前項情形，督促程序費用，應作為訴訟費用或調解程序費用之一部。
+
+> 釋：僅將現行法第一項中之「合法時期」修正為「法定期間」，俾法律用語一致。
+
+* 520 （刪除）
+
+> 釋：本條刪除。依中央法規標準法第十條第一項規定仍保留原條文條次，以利查考。
+
+* 521 債務人對於支付命令未於法定期間提出異議者，支付命令與確定判決有同一之效力。
+
+> 釋：修正意旨，係配合刪除宣告假執行程序而為修正。
 
 * 522 債權人就金錢請求或得易為金錢請求之請求，欲保全強制執行者，得聲請假扣押。前項聲請，就未到履行期之請求，亦得為之。
 
